the cart now working. also adding items from store or change the quantity in the cart, if its become 0 then remove the item, if basket empty remove the basket